[package]
name = "guilt-by-association"
version = "0.5.0"
authors = ["Alex Burka <rust@alexburka.com>"]

description = "Macro for declaring/implementing traits with fake associated consts (in stable Rust)"
categories = ["rust-patterns"]
homepage = "https://github.com/durka/guilt-by-association"
repository = "https://github.com/durka/guilt-by-association"
readme = "README.md"
license = "MIT"
keywords = ["associated", "const", "constant"]

